# am.plify.app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: code-quality.yml  copilot-review.yml
backend/: .env  .rustfmt.toml  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/routes/: mod.rs
backend/src/types/: mod.rs
specs/: PROJECT.md  TECHNICAL_OVERVIEW.md  THOUGHTS.txt  backup_disaster_recovery.yaml  business_domains.yaml  caching_strategy.yaml  database_indexing.yaml  deployment.yaml  filter_options.yaml  help_activities.yaml  product_form_fields.yaml  submission_form_types.yaml  testing_strategy.yaml
src/: main.rs
webapp/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
webapp/src/: App.tsx
webapp/src/services/: api.ts
