[package]
name = "amplify_app"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rusqlite = "0.32"
 headless_chrome = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 ureq = "2.0"
 serde_json = "1.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rfd = "0.14"
