[package]
name = "amplify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "7.1", features = ["chrono-impl"] }

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"
