[package]
name = "amplify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "7.1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
resend-rs = "0.5"

[dev-dependencies]
cargo-audit = "0.18"